# dxfplotter

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENCE.txt  README.md  dxfplotter.html  dxfplotter.js  main.cpp  qtloader.js  sonar-project.properties  vcpkg.json
.chglog/: config.yml
.github/workflows/: build-ci-docker-linux.yml  build-wasm.yml  build.yml  buildwindows.yml  buildwindows_BACKUP_21690.yml  buildwindows_BASE_21690.yml  buildwindows_REMOTE_21690.yml  deploy-linux-appimage.yml  deploy-linux.yml  deploy-windows.yml  deploy.yml  docker-ubuntu.yml  sonarcloud.yml
ci/: analysesonarcloud.sh  buildappimage.sh  buildsonarcloud.sh  buildwasm.sh  deploywindows.sh
cmake/: FindLcov.cmake
data/: #arcs.dxf  #feuille1.dxf  #feuille1.dxf~  #poly2.dxf  #spline10.dxf  #spline7.dxf  arc.dxf  arc.dxf~  arc2.dxf  arc3.dxf  arc3.dxf~  arc4.dxf  arc4.dxf~  arc6.dxf  arc6.dxf~  arc7.dxf  arc7.dxf~  arcs.dxf  arcs.dxf~  arcs2.dxf  arcs2.dxf~  branche.dxf  branche.dxf~  branche.gcode  branche.ngc  branche1.ngc  branche2.ngc  branche3.ngc  branche4.ngc  branche4_1.ngc  circle.ngc  feuille1.dxf  feuille1.ngc  feuille2.gcode  feuille2.ngc  feuille2_2.ngc  feuille2_full.ngc  inflexion1.dxf  inflexion1.dxf~  inflexion2.dxf  (+38 more)
resource/: CMakeLists.txt  dxfplotter.desktop  resource.qrc  stylesheet.qss
resource/font/: CMakeLists.txt  font.qrc
src/: CMakeLists.txt  main.cpp
src/common/: aggregable.h  copy.h  enum.h  exception.h  function.h
src/config/: CMakeLists.txt  config.cpp  config.h  config.h.in  config_gen.py  config_orig.h  configrawxml.cpp.in  configvariable.h  generaterawxml.cmake  group.cpp  group.h  item.cpp  item.h  list.h  node.cpp  node.h  nodelist.h  property.h  section.cpp  section.h  utils.h  variable.cpp  variable.h
src/control/: CMakeLists.txt  application.cpp  application.h
src/core/: CMakeLists.txt  assembler.cpp  assembler.h  bulge.cpp  bulge.h  constants.h  path.cpp  path.h  polyline.cpp  polyline.h  utils.h
src/exporter/: CMakeLists.txt
src/geometry/: CMakeLists.txt  arc.cpp  arc.h  assembler.cpp  assembler.h  bezier.cpp  bezier.h  biarc.cpp  biarc.h  bulge.cpp  bulge.h  cavcutils.h  circle.cpp  circle.h  cleaner.cpp  cleaner.h  cubicspline.cpp  cubicspline.h  layer.cpp  layer.h  line.cpp  line.h  orderoptimizer.cpp  orderoptimizer.h  pocketer.cpp  pocketer.h  polyline.cpp  polyline.h  quadraticspline.cpp  quadraticspline.h  rect.cpp  rect.h  sorter.cpp  sorter.h  spline.cpp  spline.h  utils.h
src/geometry/filter/: CMakeLists.txt  assembler.cpp  assembler.h  cleaner.cpp  cleaner.h  removeexactduplicate.cpp  removeexactduplicate.h  sorter.cpp  sorter.h
src/geometry/spline/: CMakeLists.txt  bezier.cpp  bezier.h  beziertobiarc.cpp  beziertobiarc.h  cubicsplinetobezier.cpp  cubicsplinetobezier.h  quadraticsplinetobezier.h  splinetobezier.cpp  splinetobezier.h
src/importer/: CMakeLists.txt
src/model/: CMakeLists.txt  application.cpp  application.cpp.orig  application.h  arc.cpp  arc.h  bulge.cpp  bulge.h  config.cpp  config.h  configvariable.h  document.cpp  document.h  documenthistory.cpp  documenthistory.h  documentmodelobserver.h  layer.cpp  layer.h  offsettedpath.cpp  offsettedpath.h  path.cpp  path.h  pathgroupsettings.cpp  pathgroupsettings.h  pathsettings.cpp  pathsettings.h  polyline.cpp  polyline.h  renderable.cpp  renderable.h  simulation.cpp  simulation.h  task.cpp  task.h  taskmodelobserver.h
src/serializer/: access.h  bulge.h  layer.h  offsettedpath.h  path.h  pathsettings.h  polyline.h  qvector2d.h  renderable.h  task.h  vector2d.h
src/view/: CMakeLists.txt  bulgepainter.cpp  bulgepainter.h  info.cpp  info.h  mainwindow.cpp  mainwindow.h  offsetedpathitem.cpp  offsetedpathitem.h  path.cpp  path.h  pathitem.cpp  pathitem.h  profile.cpp  profile.h  settingentry.h  settings.cpp  settings.h  settingtreemodel.cpp  settingtreemodel.h  task.cpp  task.h  tasklistmodel.cpp  tasklistmodel.h  viewport.cpp  viewport.h
src/view/dialogs/: CMakeLists.txt  mirror.cpp  mirror.h  setorigin.cpp  setorigin.h  transform.cpp  transform.h
src/view/dialogs/settings/: CMakeLists.txt  entry.h  group.h  list.cpp  list.h  settings.cpp  settings.h  treemodel.cpp  treemodel.h
src/view/settings/: CMakeLists.txt  entry.h  group.h  list.cpp  list.h  settings.cpp  settings.h  treemodel.cpp  treemodel.h
src/view/simulation/: CMakeLists.txt  simulation.cpp  simulation.h
src/view/simulation/internal/: CMakeLists.txt  scene.cpp  scene.h  tool.cpp  tool.h  toolpath.cpp  toolpath.h  viewport.cpp  viewport.h
src/view/task/: CMakeLists.txt  layertreemodel.cpp  layertreemodel.h  path.cpp  path.h  pathlistmodel.cpp  pathlistmodel.h  task.cpp  task.h  tasklistmodel.cpp  tasklistmodel.h
src/view/view2d/: CMakeLists.txt  basicpathitem.cpp  basicpathitem.h  bulgepainter.cpp  bulgepainter.h  offsetedpathitem.cpp  offsetedpathitem.h  offsetedpolylinepathitem.cpp  offsetedpolylinepathitem.h  offsettedpolylinepathitem.cpp  offsettedpolylinepathitem.h  pathitem.cpp  pathitem.h  pointpathitem.cpp  pointpathitem.h  polylinepathitem.cpp  polylinepathitem.h  rubberband.cpp  rubberband.h  utils.h  viewport.cpp  viewport.h
src/view/view3d/: CMakeLists.txt  viewport.cpp  viewport.h
src/view/view3d/internal/: CMakeLists.txt  tool.cpp  tool.h  toolpath.cpp  toolpath.h  viewport.cpp  viewport.h
template/: CMakeLists.txt  config.xml  mainwindow.ui  path.ui  settings.ui  task.ui  viewport.ui
test/: .dxfplotexporter.cpp.kate-swp  .testexport.cpp.kate-swp  CMakeLists.txt  a.out  arc.cpp  assembler.cpp  bulge.cpp  duplicate.dxf  dxfplotexporter.cpp  dxfplotimporter.cpp  exporter.cpp  exporterfixture.cpp  exporterfixture.h  exporterrenderer.cpp  gcodeexporter.cpp  main.cpp  openpath.dxf  orderoptimizer.cpp  path.cpp  pathsettings.cpp  pocketer.cpp  polyline.cpp  polylineutils.cpp  polylineutils.h  serializer.cpp  simulation.cpp  spline.cpp  task.cpp  test1.dxf  test1.dxf~  testarc.cpp  testbezier.cpp  testexport.cpp  verticalspeed.cpp
travis/: analysesonarcloud.sh  build.sh  buildappimage.sh  buildtestcoverage.sh
wasm/: Dockerfile
(+77 files in other folders)
